fixing stop words

--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -2834,7 +2834,11 @@
    "source": [
     "# topic modelling is an unsupervised learning technique that aims to extratc\n",
     "# the core idea of the sequence of tokens. While this technique might not be \n",
-    "# directly usable to transoform a column we can use use it to prune our dataset"
+    "# directly usable to transoform a column we can use use it to prune our dataset\n",
+    "\n",
+    "# for now we will not delete anything and just save the topics in a new column\n",
+    "# however, ahead of feature engineering / modelling we can opt to keep only\n",
+    "# a select few topics"
    ]
   },
   {
@@ -2842,7 +2846,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO\n",
+    "# use sklearn\n",
+    "# or use bertopic lib"
+   ]
   },
   {
    "cell_type": "code",
@@ -2860,7 +2868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2878,17 +2886,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Took 243.40 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def remove_stopwords(text, lang='en'):\n",
     "    if pd.isna(text):\n",
@@ -2903,15 +2903,20 @@
     "start = time.perf_counter()\n",
     "\n",
     "for df in [train_merged, test_merged]:\n",
-    "    # without NER\n",
-    "    df['no_stopwords_description'] = df['index'].map(map_from_unique(df, remove_stopwords, 'trans_clean_description', 'clean_description_lang'))\n",
-    "    df['no_stopwords_host_about'] = df['index'].map(map_from_unique(df, remove_stopwords, 'trans_clean_host_about', 'clean_host_about_lang'))\n",
-    "    df['no_stopwords_comments'] = df.apply(lambda row: remove_stopwords(row['trans_clean_comments'], row['clean_comments_lang']), axis=1)\n",
+    "    for text_col in ['trans_clean_description', 'trans_clean_host_about', 'trans_clean_comments']:\n",
+    "        lang_col = f'{text_col}_lang'\n",
+    "        ner_col = f'ner_{text_col}'\n",
     "\n",
-    "    # with NER\n",
-    "    df['no_stopwords_ner_description'] = df['index'].map(df, map_from_unique(remove_stopwords, 'ner_trans_clean_description', 'clean_description_lang'))\n",
-    "    df['no_stopwords_ner_host_about'] = df['index'].map(df, map_from_unique(remove_stopwords, 'ner_trans_clean_host_about', 'clean_host_about_lang'))\n",
-    "    df['no_stopwords_ner_comments'] = df.apply(lambda row: remove_stopwords(row['ner_trans_clean_comments'], row['clean_comments_lang']), axis=1)\n",
+    "        if (text_col == 'trans_clean_description') or (text_col == 'trans_clean_host_about'):\n",
+    "            # without NER\n",
+    "            df[f'no_stopwords_{text_col}'] = df['property_index'].map(map_from_unique(df, remove_stopwords, text_col, lang_col))\n",
+    "            # with NER\n",
+    "            df[f'no_stopwords_{ner_col}'] = df['property_index'].map(df, map_from_unique(remove_stopwords, ner_col, lang_col))\n",
+    "        else:\n",
+    "            # without NER\n",
+    "            df[f'no_stopwords_{text_col}'] = df.apply(lambda row: remove_stopwords(row[text_col], row[lang_col]), axis=1)\n",
+    "            # with NER\n",
+    "            df[f'no_stopwords_{ner_col}'] = df.apply(lambda row: remove_stopwords(row[ner_col], row[lang_col]), axis=1)\n",
     "\n",
     "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
    ]
@@ -2974,20 +2979,49 @@
     "    return text\n",
     "\n",
     "\n",
+    "# start = time.perf_counter()\n",
+    "\n",
+    "# for df in [train_merged, test_merged]:\n",
+    "#     # without NER\n",
+    "#     df['stem_description'] = df['index'].map(map_from_unique(stem, 'no_stopwords_description', 'clean_description_lang'))\n",
+    "#     df['stem_host_about'] = df['index'].map(map_from_unique(stem, 'no_stopwords_host_about', 'clean_host_about_lang'))\n",
+    "#     df['stem_comments'] = df.apply(lambda row: stem(row['no_stopwords_comments'], row['clean_comments_lang']), axis=1)\n",
+    "\n",
+    "#     # with NER\n",
+    "#     df['stem_description'] = df['index'].map(map_from_unique(stem, 'no_stopwords_ner_description', 'clean_description_lang'))\n",
+    "#     df['stem_host_about'] = df['index'].map(map_from_unique(stem, 'no_stopwords_ner_host_about', 'clean_host_about_lang'))\n",
+    "#     df['stem_comments'] = df.apply(lambda row: stem(row['no_stopwords_ner_comments'], row['clean_comments_lang']), axis=1)\n",
+    "\n",
+    "# print(f'Took {time.perf_counter() - start:0.2f} seconds')\n",
+    "\n",
     "start = time.perf_counter()\n",
     "\n",
     "for df in [train_merged, test_merged]:\n",
-    "    # without NER\n",
-    "    df['stem_description'] = df['index'].map(map_from_unique(stem, 'no_stopwords_description', 'clean_description_lang'))\n",
-    "    df['stem_host_about'] = df['index'].map(map_from_unique(stem, 'no_stopwords_host_about', 'clean_host_about_lang'))\n",
-    "    df['stem_comments'] = df.apply(lambda row: stem(row['no_stopwords_comments'], row['clean_comments_lang']), axis=1)\n",
+    "    for text_col in ['trans_clean_description', 'trans_clean_host_about', 'trans_clean_comments']:\n",
+    "        lang_col = f'{text_col}_lang'\n",
+    "        ner_col = f'ner_{text_col}'\n",
     "\n",
-    "    # with NER\n",
-    "    df['stem_description'] = df['index'].map(map_from_unique(stem, 'no_stopwords_ner_description', 'clean_description_lang'))\n",
-    "    df['stem_host_about'] = df['index'].map(map_from_unique(stem, 'no_stopwords_ner_host_about', 'clean_host_about_lang'))\n",
-    "    df['stem_comments'] = df.apply(lambda row: stem(row['no_stopwords_ner_comments'], row['clean_comments_lang']), axis=1)\n",
+    "        if (text_col == 'trans_clean_description') or (text_col == 'trans_clean_host_about'):\n",
+    "            # without NER\n",
+    "            df[f'no_stopwords_{text_col}'] = df['property_index'].map(map_from_unique(df, stem, text_col, lang_col))\n",
+    "            # with NER\n",
+    "            df[f'no_stopwords_{ner_col}'] = df['property_index'].map(df, map_from_unique(stem, ner_col, lang_col))\n",
+    "        else:\n",
+    "            # without NER\n",
+    "            df[f'no_stopwords_{text_col}'] = df.apply(lambda row: stem(row[text_col], row[lang_col]), axis=1)\n",
+    "            # with NER\n",
+    "            df[f'no_stopwords_{ner_col}'] = df.apply(lambda row: stem(row[ner_col], row[lang_col]), axis=1)\n",
     "\n",
     "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_merged.head()"
    ]
   },
   {
@@ -3059,24 +3093,6 @@
     "print(f'Took {time.perf_counter() - start:0.2f} seconds')\n",
     "\n",
     "# ... around 36 minutes (twice as fast as spacy)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Additional #2**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# POS? Text expansion? Spell correction? Chunking? removing rare words? etc...\n",
-    "# POS (how to?)\n",
-    "# TOPIC MODELLING"
    ]
   },
   {
