done with trans

--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -2576,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -2593,7 +2593,89 @@
       "Translating clean_host_about to eu: 100%|████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.06it/s]\n",
       "Translating clean_host_about to gl: 100%|████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.27it/s]\n",
       "Translating clean_comments to ko: 100%|████████████████████████████████████████████| 1412/1412 [27:55<00:00,  1.19s/it]\n",
-      "Translating clean_comments to zh-CN:   3%|█                                          | 31/1207 [00:41<30:08,  1.54s/it]"
+      "Translating clean_comments to zh-CN: 100%|█████████████████████████████████████████| 1207/1207 [27:51<00:00,  1.39s/it]\n",
+      "Translating clean_comments to iw: 100%|████████████████████████████████████████████████| 91/91 [01:44<00:00,  1.15s/it]\n",
+      "Translating clean_comments to ja: 100%|██████████████████████████████████████████████| 172/172 [07:58<00:00,  2.78s/it]\n",
+      "Translating clean_comments to pl: 100%|██████████████████████████████████████████████| 537/537 [11:25<00:00,  1.28s/it]\n",
+      "Translating clean_comments to no: 100%|██████████████████████████████████████████████| 198/198 [04:11<00:00,  1.27s/it]\n",
+      "Translating clean_comments to da: 100%|██████████████████████████████████████████████| 419/419 [09:28<00:00,  1.36s/it]\n",
+      "Translating clean_comments to gl: 100%|████████████████████████████████████████████████| 30/30 [00:50<00:00,  1.69s/it]\n",
+      "Translating clean_comments to ca: 100%|██████████████████████████████████████████████| 180/180 [05:19<00:00,  1.78s/it]\n",
+      "Translating clean_comments to sl: 100%|██████████████████████████████████████████████████| 6/6 [00:10<00:00,  1.73s/it]\n",
+      "Translating clean_comments to tr: 100%|████████████████████████████████████████████████| 57/57 [01:58<00:00,  2.07s/it]\n",
+      "Translating clean_comments to cs: 100%|██████████████████████████████████████████████| 110/110 [03:16<00:00,  1.79s/it]\n",
+      "Translating clean_comments to ar: 100%|████████████████████████████████████████████████| 11/11 [00:20<00:00,  1.90s/it]\n",
+      "Translating clean_comments to sk: 100%|████████████████████████████████████████████████| 20/20 [00:36<00:00,  1.80s/it]\n",
+      "Translating clean_comments to sv: 100%|██████████████████████████████████████████████| 360/360 [08:33<00:00,  1.43s/it]\n",
+      "Translating clean_comments to hu: 100%|████████████████████████████████████████████████| 94/94 [01:46<00:00,  1.13s/it]\n",
+      "Translating clean_comments to el: 100%|████████████████████████████████████████████████| 49/49 [01:05<00:00,  1.33s/it]\n",
+      "Translating clean_comments to fi: 100%|██████████████████████████████████████████████| 180/180 [03:58<00:00,  1.33s/it]\n",
+      "Translating clean_comments to uk: 100%|████████████████████████████████████████████████| 45/45 [01:00<00:00,  1.34s/it]\n",
+      "Translating clean_comments to la: 100%|████████████████████████████████████████████████| 13/13 [00:09<00:00,  1.33it/s]\n",
+      "Translating clean_comments to hr: 100%|████████████████████████████████████████████████| 18/18 [00:25<00:00,  1.44s/it]\n",
+      "Translating clean_comments to ceb: 100%|█████████████████████████████████████████████████| 5/5 [00:04<00:00,  1.25it/s]\n",
+      "Translating clean_comments to eu: 100%|██████████████████████████████████████████████████| 6/6 [00:06<00:00,  1.06s/it]\n",
+      "Translating clean_comments to lv: 100%|██████████████████████████████████████████████████| 3/3 [00:05<00:00,  1.68s/it]\n",
+      "Translating clean_comments to eo: 100%|██████████████████████████████████████████████████| 6/6 [00:05<00:00,  1.13it/s]\n",
+      "Translating clean_comments to sr: 100%|████████████████████████████████████████████████| 12/12 [00:13<00:00,  1.13s/it]\n",
+      "Translating clean_comments to af: 100%|██████████████████████████████████████████████████| 4/4 [00:03<00:00,  1.17it/s]\n",
+      "Translating clean_comments to lt: 100%|██████████████████████████████████████████████████| 6/6 [00:07<00:00,  1.18s/it]\n",
+      "Translating clean_comments to vi: 100%|██████████████████████████████████████████████████| 3/3 [00:04<00:00,  1.54s/it]\n",
+      "Translating clean_comments to ro: 100%|████████████████████████████████████████████████| 23/23 [00:27<00:00,  1.18s/it]\n",
+      "Translating clean_comments to fy: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.11it/s]\n",
+      "Translating clean_comments to is: 100%|██████████████████████████████████████████████████| 3/3 [00:03<00:00,  1.27s/it]\n",
+      "Translating clean_comments to bg: 100%|██████████████████████████████████████████████████| 7/7 [00:05<00:00,  1.18it/s]\n",
+      "Translating clean_comments to bs: 100%|██████████████████████████████████████████████████| 2/2 [00:02<00:00,  1.49s/it]\n",
+      "Translating clean_comments to th: 100%|██████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.94s/it]\n",
+      "Translating clean_comments to sw: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.17it/s]\n",
+      "Translating clean_comments to et: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.20it/s]\n",
+      "Translating clean_comments to id: 100%|██████████████████████████████████████████████████| 4/4 [00:03<00:00,  1.04it/s]\n",
+      "Translating clean_comments to ta: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.11it/s]\n",
+      "Translating clean_comments to km: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.38it/s]\n",
+      "Translating clean_comments to fa: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.04it/s]\n",
+      "Translating clean_comments to kn: 100%|██████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.28s/it]\n",
+      "Translating clean_comments to ko: 100%|██████████████████████████████████████████████| 193/193 [05:26<00:00,  1.69s/it]\n",
+      "Translating clean_comments to pl: 100%|████████████████████████████████████████████████| 50/50 [00:58<00:00,  1.18s/it]\n",
+      "Translating clean_comments to zh-CN: 100%|███████████████████████████████████████████| 137/137 [03:10<00:00,  1.39s/it]\n",
+      "Translating clean_comments to fi: 100%|████████████████████████████████████████████████| 23/23 [00:25<00:00,  1.12s/it]\n",
+      "Translating clean_comments to tr: 100%|██████████████████████████████████████████████████| 8/8 [00:12<00:00,  1.53s/it]\n",
+      "Translating clean_comments to sv: 100%|████████████████████████████████████████████████| 43/43 [00:46<00:00,  1.09s/it]\n",
+      "Translating clean_comments to ca: 100%|████████████████████████████████████████████████| 28/28 [00:29<00:00,  1.04s/it]\n",
+      "Translating clean_comments to cs: 100%|████████████████████████████████████████████████| 11/11 [00:11<00:00,  1.07s/it]\n",
+      "Translating clean_comments to et: 100%|██████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.02s/it]\n",
+      "Translating clean_comments to hu: 100%|████████████████████████████████████████████████| 15/15 [00:15<00:00,  1.06s/it]\n",
+      "Translating clean_comments to ar: 100%|██████████████████████████████████████████████████| 2/2 [00:02<00:00,  1.10s/it]\n",
+      "Translating clean_comments to da: 100%|████████████████████████████████████████████████| 38/38 [00:47<00:00,  1.24s/it]\n",
+      "Translating clean_comments to ja: 100%|████████████████████████████████████████████████| 24/24 [01:27<00:00,  3.64s/it]\n",
+      "Translating clean_comments to el: 100%|██████████████████████████████████████████████████| 9/9 [00:11<00:00,  1.32s/it]\n",
+      "Translating clean_comments to iw: 100%|████████████████████████████████████████████████| 13/13 [00:13<00:00,  1.07s/it]\n",
+      "Translating clean_comments to no: 100%|████████████████████████████████████████████████| 20/20 [00:22<00:00,  1.11s/it]\n",
+      "Translating clean_comments to hr: 100%|██████████████████████████████████████████████████| 2/2 [00:02<00:00,  1.13s/it]\n",
+      "Translating clean_comments to mk: 100%|██████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.32it/s]\n",
+      "Translating clean_comments to ro: 100%|██████████████████████████████████████████████████| 3/3 [00:03<00:00,  1.21s/it]\n",
+      "Translating clean_comments to gl: 100%|██████████████████████████████████████████████████| 3/3 [00:03<00:00,  1.04s/it]\n",
+      "Translating clean_comments to sk: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.31it/s]\n",
+      "Translating clean_comments to sr: 100%|██████████████████████████████████████████████████| 3/3 [00:02<00:00,  1.02it/s]\n",
+      "Translating clean_comments to uk: 100%|██████████████████████████████████████████████████| 2/2 [00:01<00:00,  1.12it/s]\n",
+      "Translating clean_comments to la: 100%|██████████████████████████████████████████████████| 2/2 [00:02<00:00,  1.09s/it]\n",
+      "Translating clean_comments to kn: 100%|██████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.36s/it]\n",
+      "Translating clean_comments to bg: 100%|██████████████████████████████████████████████████| 2/2 [00:02<00:00,  1.16s/it]\n",
+      "Translating clean_comments to ceb: 100%|█████████████████████████████████████████████████| 1/1 [00:00<00:00,  1.30it/s]\n",
+      "Translating clean_comments to lv: 100%|██████████████████████████████████████████████████| 1/1 [00:01<00:00,  1.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 8276.34 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -2654,9 +2736,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 331,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "trans_clean_comments_lang\n",
+       "en    240175\n",
+       "fr     53114\n",
+       "pt     22552\n",
+       "es     19371\n",
+       "de     14272\n",
+       "it      5708\n",
+       "nl      3555\n",
+       "ru      1523\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# checking if all is good\n",
     "train_merged['trans_clean_comments_lang'].value_counts()"
@@ -2664,9 +2766,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comment_index                      0\n",
+      "property_index                     0\n",
+      "description                        0\n",
+      "host_about                      1017\n",
+      "unlisted                           0\n",
+      "comments                           0\n",
+      "clean_description                  0\n",
+      "clean_host_about                   0\n",
+      "clean_comments                     0\n",
+      "clean_description_lang             0\n",
+      "clean_host_about_lang              0\n",
+      "clean_comments_lang                0\n",
+      "trans_clean_description            0\n",
+      "trans_clean_description_lang       0\n",
+      "trans_clean_host_about             0\n",
+      "trans_clean_host_about_lang        0\n",
+      "trans_clean_comments               0\n",
+      "trans_clean_comments_lang          0\n",
+      "dtype: int64\n",
+      "\n",
+      "comment_index                     0\n",
+      "property_index                    0\n",
+      "description                       0\n",
+      "host_about                      133\n",
+      "comments                          0\n",
+      "clean_description                 0\n",
+      "clean_host_about                  0\n",
+      "clean_comments                    0\n",
+      "clean_description_lang            0\n",
+      "clean_host_about_lang             0\n",
+      "clean_comments_lang               0\n",
+      "trans_clean_description           0\n",
+      "trans_clean_description_lang      0\n",
+      "trans_clean_host_about            0\n",
+      "trans_clean_host_about_lang       0\n",
+      "trans_clean_comments              0\n",
+      "trans_clean_comments_lang         0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "print(train_merged.isnull().sum())\n",
     "print()\n",
@@ -2675,13 +2822,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comment_index                   0\n",
+      "property_index                  0\n",
+      "description                     0\n",
+      "host_about                      0\n",
+      "unlisted                        0\n",
+      "comments                        0\n",
+      "clean_description               0\n",
+      "clean_host_about                0\n",
+      "clean_comments                  0\n",
+      "clean_description_lang          0\n",
+      "clean_host_about_lang           0\n",
+      "clean_comments_lang             0\n",
+      "trans_clean_description         0\n",
+      "trans_clean_description_lang    0\n",
+      "trans_clean_host_about          0\n",
+      "trans_clean_host_about_lang     0\n",
+      "trans_clean_comments            0\n",
+      "trans_clean_comments_lang       0\n",
+      "dtype: int64\n",
+      "\n",
+      "comment_index                   0\n",
+      "property_index                  0\n",
+      "description                     0\n",
+      "host_about                      0\n",
+      "comments                        0\n",
+      "clean_description               0\n",
+      "clean_host_about                0\n",
+      "clean_comments                  0\n",
+      "clean_description_lang          0\n",
+      "clean_host_about_lang           0\n",
+      "clean_comments_lang             0\n",
+      "trans_clean_description         0\n",
+      "trans_clean_description_lang    0\n",
+      "trans_clean_host_about          0\n",
+      "trans_clean_host_about_lang     0\n",
+      "trans_clean_comments            0\n",
+      "trans_clean_comments_lang       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "print((train_merged == '').sum())\n",
     "print()\n",
     "print((test_merged == '').sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_merged = pd.read_csv('corpora/trans_train_merged.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_merged.isnull().sum()"
    ]
   },
   {
