looking at feature engineering

--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -32,11 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "from collections import defaultdict, Counter\n",
     "import time\n",
     "import re\n",
     "import string\n",
@@ -60,7 +61,6 @@
     "\n",
     "import spacy\n",
     "from unidecode import unidecode\n",
-    "from simplemma import lemmatize, text_lemmatizer, simple_tokenizer  # https://github.com/adbar/simplemma\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -68,18 +68,23 @@
     "from deep_translator import GoogleTranslator  # https://github.com/nidhaloff/deep-translator\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.metrics import classification_report, ConfusionMatrixDisplay, confusion_matrix\n",
     "\n",
-    "from transformers import pipeline\n",
+    "from datasets import DatasetDict\n",
+    "from transformers import (pipeline, Trainer, TrainingArguments, AutoModel,\n",
+    "                          AutoModelForSequenceClassification, AutoTokenizer)\n",
     "\n",
     "import torch\n",
     "from torch.autograd import Variable\n",
     "import torch.nn.functional as F\n",
-    "import torchtext.vocab as vocab"
+    "import torchtext.vocab as vocab\n",
+    "\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +110,8 @@
     "TEST_INFO_PATH = os.path.join(RAW_DATA_DIR, 'test.xlsx')\n",
     "TEST_REVIEWS_PATH = os.path.join(RAW_DATA_DIR, 'test_reviews.xlsx')\n",
     "\n",
-    "TRAIN_PREPROCESSED = os.path.join('corpora', 'train_preprocessed.csv')\n",
-    "TEST_PREPROCESSED = os.path.join('corpora', 'test_preprocessed.csv')"
+    "TRAIN_PREPROCESSED_PATH = os.path.join('corpora', 'train_preprocessed.pkl')\n",
+    "TEST_PREPROCESSED_PATH = os.path.join('corpora', 'test_preprocessed.pkl')"
    ]
   },
   {
@@ -4317,16 +4322,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_merged.to_pickle(os.path.join('corpora', 'train_preprocessed.pkl'))\n",
-    "test_merged.to_pickle(os.path.join('corpora', 'test_preprocessed.pkl'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -4393,7 +4388,7 @@
     "                                                      stratify=y_train_val,\n",
     "                                                      random_state=SEED)\n",
     "    \n",
-    "    return X_train, X_val, X_test, y_train, y_val, y_test\n",
+    "    return (X_train, X_val, X_test, y_train, y_val, y_test)\n",
     "\n",
     "# get_prop = lambda d: round(len(d) / len(X) * 100, 2)\n",
     "# print('Dataset shapes:')\n",
@@ -4401,6 +4396,145 @@
     "# print(f'\\tVal: {len(X_val)} ({get_prop(X_val)}%)')\n",
     "# print(f'\\tTest: {len(X_test)} ({get_prop(X_test)}%)')\n",
     "# print(f\"\\nTotal observations: {len(X)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Loading Pre-processed Data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# existing columns\n",
+    "\n",
+    "# 'comment_index',\n",
+    "# 'property_index',\n",
+    "# 'description',\n",
+    "# 'host_about',\n",
+    "# 'unlisted',\n",
+    "# 'comments',\n",
+    "# 'clean_description',\n",
+    "# 'clean_host_about',\n",
+    "# 'clean_comments',\n",
+    "# 'clean_description_lang',\n",
+    "# 'clean_host_about_lang',\n",
+    "# 'clean_comments_lang',\n",
+    "# 'trans_clean_description',\n",
+    "# 'trans_clean_description_lang',\n",
+    "# 'trans_clean_host_about',\n",
+    "# 'trans_clean_host_about_lang',\n",
+    "# 'trans_clean_comments',\n",
+    "# 'trans_clean_comments_lang',\n",
+    "# 'ner_trans_clean_description',\n",
+    "# 'ner_trans_clean_host_about',\n",
+    "# 'ner_trans_clean_comments',\n",
+    "# 'no_stopwords_trans_clean_description',\n",
+    "# 'no_stopwords_ner_trans_clean_description',\n",
+    "# 'no_stopwords_trans_clean_host_about',\n",
+    "# 'no_stopwords_ner_trans_clean_host_about',\n",
+    "# 'no_stopwords_trans_clean_comments',\n",
+    "# 'no_stopwords_ner_trans_clean_comments',\n",
+    "# 'stem_no_stopwords_trans_clean_description',\n",
+    "# 'stem_no_stopwords_ner_trans_clean_description',\n",
+    "# 'stem_no_stopwords_trans_clean_host_about',\n",
+    "# 'stem_no_stopwords_ner_trans_clean_host_about',\n",
+    "# 'stem_no_stopwords_trans_clean_comments',\n",
+    "# 'stem_no_stopwords_ner_trans_clean_comments',\n",
+    "# 'lemma_no_stopwords_trans_clean_description',\n",
+    "# 'lemma_no_stopwords_trans_clean_host_about',\n",
+    "# 'lemma_no_stopwords_trans_clean_comments',\n",
+    "# 'lemma_no_stopwords_ner_trans_clean_description',\n",
+    "# 'lemma_no_stopwords_ner_trans_clean_host_about',\n",
+    "# 'lemma_no_stopwords_ner_trans_clean_comments'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO make sure split not only stratifies label but also languages?\n",
+    "\n",
+    "def load_preprocessed_data(columns=None):\n",
+    "    train_df = pd.read_pickle(TRAIN_PREPROCESSED_PATH)\n",
+    "    test_df = pd.read_pickle(TEST_PREPROCESSED_PATH)\n",
+    "\n",
+    "    if columns:\n",
+    "        train_df = train_df[columns + (['unlisted'] if 'unlisted' not in columns else [])]\n",
+    "        test_df = test_df[[col for col in columns if col != 'unlisted']]\n",
+    "\n",
+    "    return train_df, test_df\n",
+    "\n",
+    "\n",
+    "def groupby_property(df):\n",
+    "    if 'property_index' not in df.columns:\n",
+    "        raise IndexError(\"property_index not in columns. It is needed to group by property.\")\n",
+    "    new_df = df.groupby('property_index').agg(lambda x: ' '.join(set(x)))\n",
+    "    return new_df\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, test_df = load_preprocessed_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 458,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = train_df[['property_index', 'lemma_no_stopwords_trans_clean_description', 'lemma_no_stopwords_trans_clean_comments']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lemma_no_stopwords_trans_clean_description    0\n",
+       "lemma_no_stopwords_trans_clean_comments       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 464,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupby_property(train_df).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Tokenization**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# is tokenization feature engineering?"
    ]
   },
   {
@@ -4420,8 +4554,7 @@
     "\n",
     "# process:\n",
     "# 1. tokenize\n",
-    "# 2. get embedding\n",
-    "# 3. feature extraction / fine tuning"
+    "# 2. get embedding"
    ]
   },
   {
@@ -4436,7 +4569,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# multi lingual: https://stackoverflow.com/questions/42065113/does-word2vec-supports-multiple-lang"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4456,7 +4591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Additional #1**"
+    "- **Additional #1: XLM-RoBERTa Embeddings**"
    ]
   },
   {
@@ -4542,7 +4677,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4606,7 +4752,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# RECALL THAT WHEN PRE PROCESSING THE DATA THE PROPERTIES WITH NO REVIEWS WERE DROPPED\n",
+    "# THEREFORE, NOT ALL PROPERTIES WE NEED TO MAKE PREDICTIONS ON ARE IN THE TEST SET\n",
+    "# WE FIRST NEED TO GET THEM (TEST_INFO_RAW FOR EXAMPLE)"
+   ]
   }
  ],
  "metadata": {
