--- a/group-3-main-diogo.ipynb
+++ b/group-3-main-diogo.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -51,11 +51,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\20230737\\Text_Mining\\text-mining-group-project-23-24-main\\.venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'simplemma'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mspacy\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01munidecode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m unidecode\n\u001b[1;32m---> 30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimplemma\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m lemmatize, text_lemmatizer, simple_tokenizer  \u001b[38;5;66;03m# https://github.com/adbar/simplemma\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbs4\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BeautifulSoup\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfasttext\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'simplemma'"
      ]
     }
    ],
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -163,22 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "index column to identify each property\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Metadata:\n",
     "    \n",
@@ -205,349 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train info shape: (6248, 4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>description</th>\n",
-       "      <th>host_about</th>\n",
-       "      <th>unlisted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>This is a shared mixed room in our hostel, wit...</td>\n",
-       "      <td>Alojamento Local Registro: 20835/AL</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>O meu espaço fica perto de Parque Eduardo VII,...</td>\n",
-       "      <td>I am friendly host, and I will try to always b...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Trafaria’s House is a cozy and familiar villa ...</td>\n",
-       "      <td>I am a social person liking to communicate, re...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Apartamento Charmoso no Chiado, Entre o Largo ...</td>\n",
-       "      <td>Hello!_x000D_\\nI m Portuguese and i love to me...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Joli appartement  en bordure de mer.&lt;br /&gt; 2 m...</td>\n",
-       "      <td>Nous sommes une famille avec deux enfants de 1...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                                        description  \\\n",
-       "0      1  This is a shared mixed room in our hostel, wit...   \n",
-       "1      2  O meu espaço fica perto de Parque Eduardo VII,...   \n",
-       "2      3  Trafaria’s House is a cozy and familiar villa ...   \n",
-       "3      4  Apartamento Charmoso no Chiado, Entre o Largo ...   \n",
-       "4      5  Joli appartement  en bordure de mer.<br /> 2 m...   \n",
-       "\n",
-       "                                          host_about  unlisted  \n",
-       "0                Alojamento Local Registro: 20835/AL         0  \n",
-       "1  I am friendly host, and I will try to always b...         1  \n",
-       "2  I am a social person liking to communicate, re...         1  \n",
-       "3  Hello!_x000D_\\nI m Portuguese and i love to me...         0  \n",
-       "4  Nous sommes une famille avec deux enfants de 1...         0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Train reviews shape: (361281, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>comments</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>this is a very cozy and comfortable house to s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>good&lt;br/&gt;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>My first hostel experience, and all I have to ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Das Hostel war neu und deshalb funktionierte a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>It was fine for a dorm, but I think for the pe...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                                           comments\n",
-       "0      1  this is a very cozy and comfortable house to s...\n",
-       "1      1                                          good<br/>\n",
-       "2      1  My first hostel experience, and all I have to ...\n",
-       "3      1  Das Hostel war neu und deshalb funktionierte a...\n",
-       "4      1  It was fine for a dorm, but I think for the pe..."
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test info shape: (695, 3)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>description</th>\n",
-       "      <th>host_about</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>&lt;b&gt;The space&lt;/b&gt;&lt;br /&gt;Apartment located in the...</td>\n",
-       "      <td>Gosto de viajar, de conhecer pessoas, gosto de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>IMPORTANT: In response to COVID-19, this prope...</td>\n",
-       "      <td>We are the be@home Team!\\n\\nYou can count on u...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Bright, beautiful, and spacious. This four-bed...</td>\n",
-       "      <td>Hi there!\\n\\nWe're GuestReady, a professional ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Charming Apartment Close to the Bay of Cascais...</td>\n",
-       "      <td>:)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Se procura umas férias perto da praia, casino ...</td>\n",
-       "      <td>Bem vindos a Portugal!_x000D_\\nAdoro o meu Paí...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                                        description  \\\n",
-       "0      1  <b>The space</b><br />Apartment located in the...   \n",
-       "1      2  IMPORTANT: In response to COVID-19, this prope...   \n",
-       "2      3  Bright, beautiful, and spacious. This four-bed...   \n",
-       "3      4  Charming Apartment Close to the Bay of Cascais...   \n",
-       "4      5  Se procura umas férias perto da praia, casino ...   \n",
-       "\n",
-       "                                          host_about  \n",
-       "0  Gosto de viajar, de conhecer pessoas, gosto de...  \n",
-       "1  We are the be@home Team!\\n\\nYou can count on u...  \n",
-       "2  Hi there!\\n\\nWe're GuestReady, a professional ...  \n",
-       "3                                                 :)  \n",
-       "4  Bem vindos a Portugal!_x000D_\\nAdoro o meu Paí...  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Test reviews shape: (41866, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>comments</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Thank you very much Antonio ! All has been per...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Very nice appartment in the old town of Lissab...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>When travelling we're looking for kids friendl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>We've been in Lisbon in march 2013 (3 adults a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Our host Antonio was very helpful with informa...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index                                           comments\n",
-       "0      1  Thank you very much Antonio ! All has been per...\n",
-       "1      1  Very nice appartment in the old town of Lissab...\n",
-       "2      1  When travelling we're looking for kids friendl...\n",
-       "3      1  We've been in Lisbon in march 2013 (3 adults a...\n",
-       "4      1  Our host Antonio was very helpful with informa..."
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_info_raw = pd.read_excel(TRAIN_INFO_PATH)\n",
     "train_reviews_raw = pd.read_excel(TRAIN_REVIEWS_PATH)\n",
@@ -5705,7 +5365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
